--- a/vue3/package.json
+++ b/vue3/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "4.x",
+    "dhtmlx-gantt": "^8.0.10",
+    "echarts": "^5.5.1",
+    "frappe-gantt": "^0.8.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
